# novel-downloader-tui

./: .clangd  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  QUICK_CMD.md  README.md  TODO.md  run.ps1  vcpkg.json  大道.txt
.github/workflows/: release-windows-static.yml
batch_api/: rain_client.py  rain_export.py  rain_login.py  rain_tool.py
cmake/: sync_resources.cmake
plugins/: README.md  fanqie.js  fanqie.lua  qimao.js  qimao.lua
plugins/_shared/: common.js  common.lua  rain_batch.js
reference/: fanqie.json
scripts/: publish-gui.ps1
src/: dotenv.h  logger.h  main.cpp
src/api/: fanqie_client.cpp  fanqie_client.h
src/application/: download_service.cpp  download_service.h  export_service.cpp  export_service.h  library_service.cpp  library_service.h
src/db/: database.cpp  database.h
src/export/: epub_exporter.cpp  epub_exporter.h  text_sanitizer.cpp  text_sanitizer.h  txt_exporter.cpp  txt_exporter.h
src/gui/: README.md  app_runtime.cpp  app_runtime.h  bridge.cpp  bridge.h  frontend.cpp  frontend.h  gui_stub_main.cpp  main.cpp  user_paths.cpp  user_paths.h
src/gui/NovelDownloaderGui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NovelDownloaderGui.csproj  NovelDownloaderGui.sln  Package.appxmanifest  app.manifest
src/gui/NovelDownloaderGui/Controls/: BookDetailControl.xaml  BookDetailControl.xaml.cs
src/gui/NovelDownloaderGui/Helpers/: PathLocator.cs
src/gui/NovelDownloaderGui/Models/: AppSettings.cs  NovelModels.cs
src/gui/NovelDownloaderGui/Pages/: BookshelfPage.xaml  BookshelfPage.xaml.cs  SearchPage.xaml  SearchPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
src/gui/NovelDownloaderGui/Properties/: launchSettings.json
src/gui/NovelDownloaderGui/Properties/PublishProfiles/: single-file-win-x64.pubxml
src/gui/NovelDownloaderGui/Services/: AppSettingsService.cs  BackendService.cs
src/gui/NovelDownloaderGui/Styles/: ThemeResources.xaml
src/gui/backend/: backend_bridge.cpp  backend_bridge.h  bridge_exports.cpp
src/gui/frontend/: app.css  app.js  index.html
src/models/: book.h
src/source/domain/: book_source.h  source_errors.h  source_types.h
src/source/host/: host_api.cpp  host_api.h  http_service.cpp  http_service.h  json_bridge.cpp  json_bridge.h
src/source/js/: js_book_source.cpp  js_book_source.h  js_plugin_runtime.cpp  js_plugin_runtime.h
src/source/lua/: lua_book_source.cpp  lua_book_source.h  lua_runtime.cpp  lua_runtime.h  lua_source_schema.cpp  lua_source_schema.h
src/source/runtime/: source_manager.cpp  source_manager.h
src/tui/: app.cpp  app.h
src/tui/components/: loading_indicator.cpp  loading_indicator.h
src/tui/screens/: book_detail_screen.cpp  book_detail_screen.h  bookshelf_screen.cpp  bookshelf_screen.h  search_screen.cpp  search_screen.h
src/ui/: app.cpp  app.h
src/ui/components/: loading_indicator.cpp  loading_indicator.h
src/ui/screens/: book_detail_screen.cpp  book_detail_screen.h  bookshelf_screen.cpp  bookshelf_screen.h  search_screen.cpp  search_screen.h
